SERVER-55395 stdx/thread.h needs cstdlib