src/mongo/stdx/thread.h
@@ -34,6 +34,7 @@
 #include <csignal>
 #include <cstddef>
 #include <cstdint>
+#include <cstdlib>
 #include <ctime>
 #include <exception>
 #include <thread>
